[gd_scene load_steps=12 format=2]

[ext_resource path="res://VirtualOS/Minigames/EdgyDate/EdgyDialogue.gd" type="Script" id=1]
[ext_resource path="res://Assets/Edgy/EdgyNormal.tres" type="Texture" id=2]
[ext_resource path="res://Assets/Edgy/EdgyBugged.tres" type="Texture" id=3]
[ext_resource path="res://Assets/Edgy/EdgyUpse.tres" type="Texture" id=4]
[ext_resource path="res://Assets/Edgy/EdgyGiggly.tres" type="Texture" id=5]
[ext_resource path="res://Assets/VirtualOS/VirtualOSTheme.tres" type="Theme" id=6]
[ext_resource path="res://Assets/VirtualOS/BootFont.tres" type="DynamicFont" id=7]
[ext_resource path="res://Assets/VirtualOS/AlphaButton.tres" type="StyleBox" id=8]

[sub_resource type="Animation" id=2]
resource_name = "show_text"
length = 3.0
tracks/0/type = "value"
tracks/0/path = NodePath("CenterContainer/Label:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 2.8, 3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=1]
resource_name = "show_next_dialog"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("Control/Panel/Label:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Control/Panel/VBoxContainer/Option1:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Control/Panel/VBoxContainer/Option2:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1, 1.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Control/Panel/VBoxContainer/Option3:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 1.2, 2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "end"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("ColorRect:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[node name="CanvasLayer" type="CanvasLayer"]
layer = 10
script = ExtResource( 1 )
edgy_normal = ExtResource( 2 )
edgy_bugged = ExtResource( 3 )
edgy_upset = ExtResource( 4 )
edgy_giggly = ExtResource( 5 )

[node name="Control" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 6 )

[node name="Edgy" type="TextureRect" parent="Control"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -263.0
margin_right = 197.0
grow_vertical = 0
texture = ExtResource( 2 )
stretch_mode = 1

[node name="Panel" type="Panel" parent="Control"]
editor/display_folded = true
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 198.0
margin_top = -249.0
margin_right = -20.0
margin_bottom = -20.0

[node name="Label" type="Label" parent="Control/Panel"]
anchor_right = 1.0
margin_left = 6.0
margin_top = 6.0
margin_right = -6.0
margin_bottom = 28.0
custom_fonts/font = ExtResource( 7 )
text = "YOU ONLY WANT ME FOR DOWNLOADING 
ANOTHER BROWSER... AND THEN YOU'LL FORGET ME ...
AGAIN!!!"

[node name="VBoxContainer" type="VBoxContainer" parent="Control/Panel"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = -136.0
margin_right = -10.0
margin_bottom = -10.0
custom_constants/separation = 10
alignment = 2

[node name="Option1" type="Button" parent="Control/Panel/VBoxContainer"]
margin_top = 40.0
margin_right = 512.0
margin_bottom = 62.0
custom_styles/hover = ExtResource( 8 )
custom_styles/pressed = ExtResource( 8 )
custom_styles/focus = ExtResource( 8 )
custom_styles/disabled = ExtResource( 8 )
custom_styles/normal = ExtResource( 8 )
custom_fonts/font = ExtResource( 7 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 1, 0.992157, 0.6, 1 )
custom_colors/font_color_pressed = Color( 0.333333, 0.333333, 0.333333, 1 )
text = "NO! I WILL NEVER DO THAT TO YOU!"
align = 0

[node name="Option2" type="Button" parent="Control/Panel/VBoxContainer"]
margin_top = 72.0
margin_right = 512.0
margin_bottom = 94.0
custom_styles/hover = ExtResource( 8 )
custom_styles/pressed = ExtResource( 8 )
custom_styles/focus = ExtResource( 8 )
custom_styles/disabled = ExtResource( 8 )
custom_styles/normal = ExtResource( 8 )
custom_fonts/font = ExtResource( 7 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 1, 0.992157, 0.6, 1 )
custom_colors/font_color_pressed = Color( 0.333333, 0.333333, 0.333333, 1 )
text = "NOT MY FAULT YOU SUCK"
align = 0

[node name="Option3" type="Button" parent="Control/Panel/VBoxContainer"]
margin_top = 104.0
margin_right = 512.0
margin_bottom = 126.0
custom_styles/hover = ExtResource( 8 )
custom_styles/pressed = ExtResource( 8 )
custom_styles/focus = ExtResource( 8 )
custom_styles/disabled = ExtResource( 8 )
custom_styles/normal = ExtResource( 8 )
custom_fonts/font = ExtResource( 7 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 1, 0.992157, 0.6, 1 )
custom_colors/font_color_pressed = Color( 0.333333, 0.333333, 0.333333, 1 )
text = "CAN YOU BOOT JUST ONCE ? .. PLEASE?"
align = 0

[node name="EdgySolo" type="Panel" parent="Control"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 198.0
margin_top = -249.0
margin_right = -20.0
margin_bottom = -20.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="Control/EdgySolo"]
anims/show_text = SubResource( 2 )

[node name="CenterContainer" type="CenterContainer" parent="Control/EdgySolo"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Label" type="Label" parent="Control/EdgySolo/CenterContainer"]
modulate = Color( 1, 1, 1, 0.08 )
margin_left = 12.0
margin_top = 78.0
margin_right = 520.0
margin_bottom = 150.0
custom_fonts/font = ExtResource( 7 )
text = "YOU ONLY WANT ME FOR DOWNLOADING 
ANOTHER BROWSER... AND THEN YOU'LL FORGET ME ...
AGAIN!!!"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/show_next_dialog = SubResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
visible = false
modulate = Color( 1, 1, 1, 0 )
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )

[node name="EndAnimation" type="AnimationPlayer" parent="."]
anims/end = SubResource( 3 )

[connection signal="pressed" from="Control/Panel/VBoxContainer/Option1" to="." method="_on_Option1_pressed"]
[connection signal="pressed" from="Control/Panel/VBoxContainer/Option2" to="." method="_on_Option2_pressed"]
[connection signal="pressed" from="Control/Panel/VBoxContainer/Option3" to="." method="_on_Option3_pressed"]
